@@ -6,14 +6,14 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/10/08 13:14:09 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/16 11:43:02 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/18 14:47:18 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
 #include "../Header/Parsing.h"
 
 /*****************THERE IS ISSUE HERE IN FREING AND . .. HANDLE ERROR */
-int builtin_recognizer(char **cmd_table, t_my_env **env)
+int builtin_recognizer(t_cmd_table **head, char **cmd_table, t_my_env **env)
 {
     if (cmd_table[0] && ft_strcmp(cmd_table[0], "pwd") == 0)
         return (status_setter(run_pwd(cmd_table)), 1);
@@ -28,7 +28,7 @@ int builtin_recognizer(char **cmd_table, t_my_env **env)
     else if (cmd_table[0] && ft_strcmp(cmd_table[0], "env") == 0)
         return (status_setter(run_env(cmd_table, env)), 1);
     else if (cmd_table[0] && ft_strcmp(cmd_table[0], "exit") == 0)
-        return (status_setter(run_exit(cmd_table, env)), 1);
+        return (status_setter(run_exit(head,cmd_table, env)), 1);
     return (0);
 }
 
