@@ -6,7 +6,7 @@
 #    By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/02 23:58:10 by abait-ta          #+#    #+#              #
-#    Updated: 2023/10/17 19:48:37 by abait-ta         ###   ########.fr        #
+#    Updated: 2023/10/18 20:14:51 by abait-ta         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,8 @@ Global_main.c ./Parsing/Lexical_analysis/cleaner_end.c ./Parsing/Lexical_analysi
 ./Parsing/Lexical_analysis/out_function.c ./Parsing/Data_sender/List_management.c ./Parsing/Data_sender/linked_list_tools.c\
 ./Parsing/Data_sender/recognizer.c ./Parsing/Data_sender/command_table.c ./Parsing/Data_sender/fd_generator.c\
 ./Built-in/cd.c ./Built-in/env_displayer.c ./Built-in/exit.c ./Built-in/export.c ./Built-in/pwd.c \
-./Built-in/unset.c ./Built-in/echo.c Global_outfunc.c
+./Built-in/unset.c ./Built-in/echo.c Global_outfunc.c 
+# exit_status.c status_test.c
 
 Header = ./Header/Parsing.h
 
@@ -41,11 +42,11 @@ OBJ = ${SRC:.c=.o}
 all : $(NAME)
 
 $(NAME): $(HEADER) $(OBJ)
-	@$(CC) $(CFLAGS) -o $@   $(OBJ)  $(READLINE) && rm $(OBJ)
+	@$(CC) $(CFLAGS) -o $@  $(OBJ)  $(READLINE) && rm $(OBJ)
 
 %.o : %.c $(HEADER)
 	@$(CC)  $(CFLAGS) -c    $< -o  $@	
-
+# -fsanitize=address -g
 clean :
 	@$(RM) $(OBJ)
 
